<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        >
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@mipmap/icon_setting"
            android:layout_alignParentRight="true"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:id="@+id/iv_setting"
            />
        <com.makeramen.roundedimageview.RoundedImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@mipmap/icon_user_photo"
            android:scaleType="centerCrop"
            android:layout_centerInParent="true"
            app:riv_corner_radius="25dp"
            android:id="@+id/riv_user_photo"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="超凡大师"
            android:textColor="@color/white"
            android:layout_below="@+id/riv_user_photo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:id="@+id/tv_user_name"
            />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mine_person_info"
            android:drawableLeft="@mipmap/icon_personinfo"
            android:paddingBottom="@dimen/mine_options_padding_vertical"
            android:paddingTop="@dimen/mine_options_padding_vertical"
            android:layout_marginLeft="@dimen/mine_options_margin_horizontal"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:drawablePadding="@dimen/mine_options_padding_vertical"
            android:id="@+id/tv_person_info"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider_color"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mine_safe_setting"
            android:drawableLeft="@mipmap/icon_safe_setting"
            android:paddingBottom="@dimen/mine_options_padding_vertical"
            android:paddingTop="@dimen/mine_options_padding_vertical"
            android:layout_marginLeft="@dimen/mine_options_margin_horizontal"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:drawablePadding="@dimen/mine_options_padding_vertical"
            android:id="@+id/tv_safe_setting"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider_color"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mine_safe_exit"
            android:drawableLeft="@mipmap/icon_exit"
            android:paddingBottom="@dimen/mine_options_padding_vertical"
            android:paddingTop="@dimen/mine_options_padding_vertical"
            android:layout_marginLeft="@dimen/mine_options_margin_horizontal"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:drawablePadding="@dimen/mine_options_padding_vertical"
            android:id="@+id/tv_exit"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider_color"
            />
    </LinearLayout>
</LinearLayout>